s/car-confirmation-screen-ui-polish

--- a/project/src/main/res/layout/widget_car_confirmation.xml
+++ b/project/src/main/res/layout/widget_car_confirmation.xml
@@ -111,7 +111,7 @@
                     android:id="@+id/direction_action_textView"
                     style="@style/CarsBookingButton"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
                     android:drawableLeft="@drawable/car_directions"
                     android:textColor="@color/cars_confirmation_action_text_color" />
@@ -120,7 +120,7 @@
                     android:id="@+id/calendar_action_textView"
                     style="@style/CarsBookingButton"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
                     android:drawableLeft="@drawable/add_to_calendar"
                     android:text="@string/add_to_calendar"
@@ -135,7 +135,7 @@
                     android:id="@+id/add_hotel_textView"
                     style="@style/CarsBookingButton"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
                     android:drawableLeft="@drawable/car_hotel"
                     android:textColor="@color/cars_confirmation_action_text_color" />
@@ -144,7 +144,7 @@
                     android:id="@+id/add_flight_textView"
                     style="@style/CarsBookingButton"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
                     android:layout_marginTop="1dp"
                     android:drawableLeft="@drawable/car_flights"
