--- a/project/src/main/res/layout/section_launch_list_card.xml
+++ b/project/src/main/res/layout/section_launch_list_card.xml
@@ -28,7 +28,6 @@
         android:layout_gravity="right"
         android:layout_marginRight="@dimen/launch_tile_hotel_sale_right_margin"
         android:alpha=".9"
-        android:background="@drawable/bg_launch_sale"
         android:drawablePadding="@dimen/launch_tile_hotel_sale_drawable_padding"
         android:paddingBottom="@dimen/launch_tile_hotel_sale_vertical_padding"
         android:paddingLeft="@dimen/launch_tile_hotel_sale_horizontal_padding"
@@ -43,16 +42,18 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:paddingBottom="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
+        android:paddingLeft="14dp"
+        android:paddingRight="14dp">
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:layout_toLeftOf="@+id/full_tile_price_container"
             android:ellipsize="end"
             android:singleLine="true"
-            android:textColor="#ffffff"
+            android:textColor="@color/launch_list_txt"
             android:textSize="15sp"
             app:textStyle="light" />
 
@@ -60,6 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/title"
+            android:layout_toLeftOf="@+id/full_tile_price_container"
             android:gravity="bottom">
 
             <com.expedia.bookings.widget.TextView
@@ -68,21 +70,99 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_gravity="left"
-                android:textColor="#ffffff"
-                android:textSize="12sp"
+                android:layout_marginTop="-5dp"
+                android:textColor="@color/launch_list_txt"
+                android:textSize="14sp"
                 app:textStyle="light" />
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/price"
+            <LinearLayout
+                android:id="@+id/rating_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <FrameLayout
+                    android:layout_width="28dp"
+                    android:layout_height="18dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/launch_list_rating_bg">
+
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/rating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:paddingBottom="1dp"
+                        android:textColor="#222222"
+                        android:textSize="12sp"
+                        app:textStyle="bold" />
+                </FrameLayout>
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/rating_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/hotel_rating_text"
+                    android:textColor="@color/launch_list_txt"
+                    android:textSize="14sp"
+                    app:textStyle="light" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/half_tile_price_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_gravity="bottom"
-                android:textColor="#ffffff"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                android:orientation="horizontal">
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/half_tile_strikethrough_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:textColor="@color/launch_list_strikethrough_txt"
+                    android:textSize="14sp" />
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/half_tile_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/launch_list_txt"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
         </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/full_tile_price_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="bottom"
+            android:orientation="vertical">
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/full_tile_strikethrough_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="right"
+                android:textColor="@color/launch_list_strikethrough_txt"
+                android:textSize="14sp" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/full_tile_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="bottom"
+                android:textColor="@color/launch_list_txt"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
