--- a/project/src/main/res/values/donottranslate.xml
+++ b/project/src/main/res/values/donottranslate.xml
@@ -79,6 +79,7 @@
     <string name="preference_suppress_flight_bookings">suppress_flight_bookings</string>
     <string name="preference_suppress_car_bookings">suppress_car_bookings</string>
     <string name="preference_suppress_hotel_bookings">suppress_hotel_bookings</string>
+    <string name="preference_suppress_lx_bookings">suppress_lx_bookings</string>
     <string name="preference_fake_current_location">preference_fake_current_location</string>
     <string name="preference_force_new_location">preference_force_new_location</string>
     <string name="preference_cookie_logging">preference_cookie_logging</string>
