--- a/project/src/main/res/values/ids.xml
+++ b/project/src/main/res/values/ids.xml
@@ -29,6 +29,7 @@
     <item name="preference_suppress_hotel_booking_checkbox" type="id"/>
     <item name="preference_suppress_flight_booking_checkbox" type="id"/>
     <item name="preference_suppress_car_booking_checkbox" type="id"/>
+    <item name="preference_suppress_lx_booking_checkbox" type="id"/>
 
     <item name="plane_window_view" type="id"/>
 
