--- a/project/src/main/res/layout/widget_checkout_base.xml
+++ b/project/src/main/res/layout/widget_checkout_base.xml
@@ -137,7 +137,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
-                android:textColor="@color/cars_primary_color"
+                android:textColor="?attr/primary_color"
                 android:textSize="@dimen/car_slide_to_purchase_price_text_size" />
         </LinearLayout>
     </LinearLayout>
