--- a/project/src/travelocity/res/values/dimens.xml
+++ b/project/src/travelocity/res/values/dimens.xml
@@ -2,7 +2,7 @@
 <resources>
     <!-- Tvly tablet home screen dimens -->
     <dimen name="tablet_launch_destination_list_text_width">280dp</dimen>
-    <dimen name="tablet_launch_destination_list_text_size">36dp</dimen>
+    <dimen name="tablet_launch_destination_list_text_size">34dp</dimen>
     <dimen name="destination_search_height">40dp</dimen>
     <dimen name="tablet_launch_destination_title_margin_top">30dp</dimen>
     <dimen name="destination_tile_extra_bottom_padding">0dp</dimen>
@@ -16,4 +16,6 @@
     <!-- Tvly tablet home screen destination list view launch card -->
     <dimen name="destination_list_horizontal_grid_margin_vertical">15dp</dimen>
     <dimen name="destination_list_launch_card_spacing">5dp</dimen>
+
+    <dimen name="search_bar_margin_top">20dp</dimen>
 </resources>
