Polish Launch ActionBar  - white overflow icon  - center actionbar tab text for launch    You cannot edit the height of ActionBar tabs, so centering    the text is inherently dirty. There's a reason that tabs    are deprecated. We'll be able to properly do this if/when    we switch to a ToolBar.  - 4191: 4.1.2 black bg on AB tabs

--- a/project/src/main/res/drawable/tab_selected.xml
+++ b/project/src/main/res/drawable/tab_selected.xml
@@ -9,6 +9,8 @@
             <stroke
                 android:color="#FFED18"
                 android:width="5dp" />
+            <solid android:color="@android:color/transparent" />
         </shape>
     </item>
+
 </layer-list>
