--- a/project/src/main/res/layout/car_lx_loading_animation_widget.xml
+++ b/project/src/main/res/layout/car_lx_loading_animation_widget.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
-    android:id="@+id/card_view"
+    android:id="@+id/loading_card_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -11,15 +11,15 @@
     <com.expedia.bookings.widget.OptimizedImageView
         android:id="@+id/background_image_view"
         android:layout_width="match_parent"
-        android:layout_height="134dp" />
+        android:layout_height="?attr/card_list_image_container_height" />
 
     <View
-        android:id="@+id/price_container"
+        android:id="@+id/price_loading_container"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="?attr/card_details_container_height"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/background_image_view"
-        android:layout_marginTop="134dp"
+        android:layout_marginTop="?attr/card_list_image_container_height"
         android:background="@android:color/white"
         android:orientation="horizontal"
         android:padding="12dp">
