--- a/project/src/main/res/layout/section_lx_search_row.xml
+++ b/project/src/main/res/layout/section_lx_search_row.xml
@@ -15,7 +15,8 @@
         <com.expedia.bookings.widget.OptimizedImageView
             android:id="@+id/activity_image"
             android:layout_width="match_parent"
-            android:layout_height="144dp" />
+            android:scaleType="centerCrop"
+            android:layout_height="?attr/card_list_image_container_height" />
 
         <View
             android:layout_width="match_parent"
@@ -36,21 +37,35 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:layout_weight="8"
+                android:layout_weight="7"
                 android:gravity="left"
                 android:maxLines="2"
                 android:textColor="@android:color/white"
                 android:textSize="14sp" />
 
-            <TextView
-                android:id="@+id/activity_price"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|bottom"
-                android:layout_weight="2"
-                android:gravity="right"
-                android:textColor="@android:color/white"
-                android:textSize="14sp" />
+                android:layout_weight="3"
+                android:orientation="vertical"
+                android:gravity="right">
+
+                <TextView
+                    android:id="@+id/activity_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/activity_from_price_ticket_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp" />
+            </LinearLayout>
 
         </LinearLayout>
     </FrameLayout>
@@ -58,11 +73,12 @@
     <LinearLayout
         android:id="@+id/activity_info_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="144dp"
+        android:layout_height="?attr/card_details_container_height"
+        android:layout_marginTop="?attr/card_list_image_container_height"
         android:background="@android:color/white"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
         <TextView
             android:id="@+id/activity_category"
@@ -76,15 +92,14 @@
             android:textSize="10sp" />
 
         <TextView
-            android:id="@+id/activity_from_price_ticket_type"
+            android:id="@+id/activity_duration"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="4dp"
             android:layout_weight="1"
             android:gravity="right"
-            android:maxLines="2"
             android:textColor="@color/lx_search_result_info_text_color"
-            android:textSize="10sp" />
+            android:textSize="10sp"
+            android:text="2 Hours" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
