--- a/project/src/main/res/values/attrs_lob.xml
+++ b/project/src/main/res/values/attrs_lob.xml
@@ -12,4 +12,8 @@
     <attr name="traveler_toolbar_text" format="reference" />
     <!-- Text displayed on collapsed traveler details widget -->
     <attr name="traveler_details_text" format="reference" />
+    <!-- Height for search list image container -->
+    <attr name="card_list_image_container_height" format="reference" />
+    <!-- Height for search list details container -->
+    <attr name="card_details_container_height" format="reference" />
 </resources>
