--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -266,6 +266,8 @@
     <dimen name="gallery_height">270dp</dimen>
     <dimen name="price_info_container_height">60dp</dimen>
     <dimen name="price_info_container_top_margin">-60dp</dimen>
+    <dimen name="lx_search_list_image_container_height">144dp</dimen>
+    <dimen name="lx_search_details_container_height">35dp</dimen>
 
     <!-- Car Search  -->
     <dimen name="car_calendar_month_view_max_text_size">12dp</dimen>
@@ -278,6 +280,8 @@
     <dimen name="car_checkout_scrollview_padding">200dp</dimen>
     <dimen name="car_search_dropdown_padding">0dp</dimen>
     <dimen name="car_search_toggle_button_padding">16dp</dimen>
+    <dimen name="car_search_list_image_container_height">134dp</dimen>
+    <dimen name="car_search_details_container_height">35dp</dimen>
     <!-- Car Confirmation Slide to reserve -->
     <dimen name="car_slide_to_purchase_price_text_size">13dp</dimen>
     <dimen name="car_slide_to_purchase_padding">50dp</dimen>
