--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -38,6 +38,9 @@
 
         <item name="traveler_toolbar_text">@string/lx_traveler_details_text</item>
         <item name="traveler_details_text">@string/lx_traveler_enter_details_text</item>
+
+        <item name="card_list_image_container_height">@dimen/lx_search_list_image_container_height</item>
+        <item name="card_details_container_height">@dimen/lx_search_details_container_height</item>
     </style>
 
     <style name="DateRadioButton" parent="V2.Theme.LX">
