--- a/project/src/main/res/layout/activity_car.xml
+++ b/project/src/main/res/layout/activity_car.xml
@@ -24,4 +24,11 @@
         android:layout_height="match_parent"
         android:visibility="gone" />
 
+    <include
+        android:id="@+id/confirmation"
+        layout="@layout/widget_car_confirmation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
 </com.expedia.bookings.presenter.CarPresenter>
