--- a/project/src/main/res/layout/section_lx_search_row.xml
+++ b/project/src/main/res/layout/section_lx_search_row.xml
@@ -70,36 +70,34 @@
         </LinearLayout>
     </FrameLayout>
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/activity_info_container"
         android:layout_width="match_parent"
         android:layout_height="?attr/card_details_container_height"
         android:layout_marginTop="?attr/card_list_image_container_height"
         android:background="@android:color/white"
-        android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
 
         <TextView
             android:id="@+id/activity_category"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="4dp"
-            android:layout_weight="7"
             android:padding="2dp"
             android:textColor="@color/lx_search_result_info_text_color"
             android:textSize="10sp" />
 
         <TextView
             android:id="@+id/activity_duration"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
+            android:layout_gravity="center_vertical|right"
+            android:drawableLeft="@drawable/doors"
+            android:drawablePadding="4dp"
             android:gravity="right"
             android:textColor="@color/lx_search_result_info_text_color"
-            android:textSize="10sp"
-            android:text="2 Hours" />
-    </LinearLayout>
+            android:textSize="10sp" />
+    </FrameLayout>
 </android.support.v7.widget.CardView>
