Dedup R.id.error_widget
There were duplicates and the test failed in an incredibly annoying way.
It just locked up. I had to run it locally to get at the device logs and
see what was happening. Never a dull moment...

--- a/project/src/main/res/layout/car_checkout_presenter.xml
+++ b/project/src/main/res/layout/car_checkout_presenter.xml
@@ -20,7 +20,7 @@
         android:background="#3A424C" />
 
     <com.expedia.bookings.widget.ErrorWidget
-        android:id="@+id/error_widget"
+        android:id="@+id/checkout_error_widget"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
