--- a/project/src/main/res/layout/car_results_presenter.xml
+++ b/project/src/main/res/layout/car_results_presenter.xml
@@ -43,7 +43,7 @@
         android:layout_height="match_parent">
 
         <com.expedia.bookings.widget.ErrorWidget
-            android:id="@+id/error_widget"
+            android:id="@+id/search_error_widget"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
