1.Updated launcher icon 2.Romoved flight from app name

--- a/project/src/voyages/res/values/donottranslate.xml
+++ b/project/src/voyages/res/values/donottranslate.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- VSC app name for the about screen-->
-    <string name="vsc_full_app_name">Agence Voyages-sncf Hôtel &amp; Vol</string>
+    <string name="vsc_full_app_name">Agence Voyages-sncf Hôtel </string>
 
     <string name="app_name">Hôtel &amp; Vol Voyages-sncf</string>
     <string name="app_vsc_info_url">http://www.voyages-sncf.com</string>
