--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -281,4 +281,5 @@
     <!-- Car Confirmation Slide to reserve -->
     <dimen name="car_slide_to_purchase_price_text_size">13dp</dimen>
     <dimen name="car_slide_to_purchase_padding">50dp</dimen>
+    <dimen name="car_image_width">300dp</dimen>
 </resources>
