--- a/project/src/main/res/layout/section_credit_card.xml
+++ b/project/src/main/res/layout/section_credit_card.xml
@@ -28,7 +28,8 @@
         <com.larvalabs.svgandroid.widget.SVGView
             android:id="@+id/svg_amex_head"
             android:layout_width="match_parent"
-            android:layout_height="109dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_marginTop="12dp"
             android:layout_marginRight="64dp"
             android:alpha=".1"
