--- a/project/src/main/res/drawable/cars_autocomplete_background_selector.xml
+++ b/project/src/main/res/drawable/cars_autocomplete_background_selector.xml
@@ -2,26 +2,26 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" >
         <shape android:shape="rectangle">
-            <solid android:color="@color/cars_dropdown_background_color" />
-            <stroke android:color="@color/cars_secondary_color" android:width="1dp" />
-            <corners android:radius="2dp" />
+            <solid android:color="#f0f0f0" />
+            <stroke android:color="@color/cars_secondary_color" android:width="2px" />
+            <corners android:radius="3dp" />
         </shape>
 
     </item>
 
     <item android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/cars_dropdown_background_color" />
-            <stroke android:color="@color/cars_secondary_color" android:width="1dp" />
-            <corners android:radius="2dp" />
+            <solid android:color="#f0f0f0" />
+            <stroke android:color="@color/cars_secondary_color" android:width="2px" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/cars_dropdown_background_color" />
-            <stroke android:color="@color/cars_dropdown_disabled_stroke" android:width="1dp" />
-            <corners android:radius="2dp" />
+            <solid android:color="#f0f0f0" />
+            <stroke android:color="@color/cars_dropdown_disabled_stroke" android:width="1px" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
 
