--- a/project/src/main/res/layout/toolbar_checkmark_item.xml
+++ b/project/src/main/res/layout/toolbar_checkmark_item.xml
@@ -8,4 +8,5 @@
     android:paddingRight="8dp"
     android:textAllCaps="false"
     android:text="@string/search"
+    android:textSize="16sp"
     android:textColor="?attr/primary_color" />
