--- a/project/src/main/res/layout/widget_car_search_params.xml
+++ b/project/src/main/res/layout/widget_car_search_params.xml
@@ -9,7 +9,7 @@
         android:id="@+id/search_container"
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:background="#F2FFFFFF"
+        android:background="#F9F9F9"
         android:paddingTop="?attr/actionBarSize"
         android:clipToPadding="false"
         android:clipChildren="false"
@@ -33,8 +33,8 @@
                 android:id="@+id/pickup_location"
                 style="@style/CarAutocomplete"
                 android:layout_width="0dp"
-                android:layout_height="43dp"
-                android:layout_marginRight="8dp"
+                android:layout_height="46dp"
+                android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:completionThreshold="1"
                 android:dropDownAnchor="@+id/location_container"
@@ -47,8 +47,8 @@
                 android:id="@+id/dropoff_location"
                 style="@style/CarAutocomplete"
                 android:layout_width="0dp"
-                android:layout_height="43dp"
-                android:layout_marginLeft="8dp"
+                android:layout_height="46dp"
+                android:layout_marginLeft="5dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:hint="@string/same_as_pick_up"
@@ -61,7 +61,7 @@
             android:id="@+id/select_date"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="match_parent"
-            android:layout_height="43dp"
+            android:layout_height="46dp"
             android:layout_below="@id/location_container"
             android:layout_marginTop="@dimen/car_search_toggle_button_padding"
             android:layout_marginLeft="16dp"
