Polish with victor

--- a/project/src/main/res/layout/car_checkout_presenter.xml
+++ b/project/src/main/res/layout/car_checkout_presenter.xml
@@ -15,6 +15,7 @@
     <com.expedia.bookings.widget.ErrorWidget
         android:id="@+id/checkout_error_widget"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="#FFFFFF"/>
 
 </merge>
