--- a/project/src/main/res/layout/car_results_presenter.xml
+++ b/project/src/main/res/layout/car_results_presenter.xml
@@ -45,7 +45,8 @@
         <com.expedia.bookings.widget.ErrorWidget
             android:id="@+id/search_error_widget"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="#FFFFFF"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/category_list"
