--- a/project/src/main/res/layout/error_widget.xml
+++ b/project/src/main/res/layout/error_widget.xml
@@ -34,6 +34,7 @@
             android:layout_marginLeft="72dp"
             android:layout_marginRight="72dp"
             android:gravity="center_horizontal"
+            android:maxWidth="180dp"
             android:textSize="13sp"
             android:textColor="#7D7D7D" />
 
