--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -282,4 +282,6 @@
     <dimen name="car_slide_to_purchase_price_text_size">13dp</dimen>
     <dimen name="car_slide_to_purchase_padding">50dp</dimen>
     <dimen name="car_image_width">300dp</dimen>
+    <dimen name="car_unexpanded_space_height">125dp</dimen>
+    <dimen name="car_expanded_space_height">350dp</dimen>
 </resources>
