--- a/project/src/main/res/layout/lx_checkout_presenter.xml
+++ b/project/src/main/res/layout/lx_checkout_presenter.xml
@@ -20,4 +20,9 @@
         android:background="#3A424C"
         android:visibility="gone" />
 
+    <com.expedia.bookings.widget.LXErrorWidget
+        android:id="@+id/lx_checkout_error_widget"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </merge>
