--- a/project/src/main/res/layout/section_launch_list_card.xml
+++ b/project/src/main/res/layout/section_launch_list_card.xml
@@ -50,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
-            android:layout_toLeftOf="@+id/full_tile_price_container"
+            android:layout_toLeftOf="@+id/price_container"
             android:ellipsize="end"
             android:singleLine="true"
             android:textColor="@color/launch_list_txt"
@@ -61,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/title"
-            android:layout_toLeftOf="@+id/full_tile_price_container"
+            android:layout_toLeftOf="@+id/price_container"
             android:gravity="bottom">
 
             <com.expedia.bookings.widget.TextView
@@ -108,35 +108,20 @@
                     app:textStyle="light" />
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/half_tile_price_container"
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/half_tile_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_gravity="bottom"
-                android:orientation="horizontal">
-
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/half_tile_strikethrough_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:textColor="@color/launch_list_strikethrough_txt"
-                    android:textSize="14sp" />
-
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/half_tile_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/launch_list_txt"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
+                android:textColor="@color/launch_list_txt"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
         </RelativeLayout>
 
         <LinearLayout
-            android:id="@+id/full_tile_price_container"
+            android:id="@+id/price_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -145,7 +130,7 @@
             android:orientation="vertical">
 
             <com.expedia.bookings.widget.TextView
-                android:id="@+id/full_tile_strikethrough_price"
+                android:id="@+id/strikethrough_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -154,13 +139,13 @@
                 android:textSize="14sp" />
 
             <com.expedia.bookings.widget.TextView
-                android:id="@+id/full_tile_price"
+                android:id="@+id/price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_gravity="bottom"
                 android:textColor="@color/launch_list_txt"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
