--- a/project/src/main/res/layout/section_launch_list_card.xml
+++ b/project/src/main/res/layout/section_launch_list_card.xml
@@ -49,7 +49,6 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
             android:layout_toLeftOf="@+id/full_tile_price_container"
             android:ellipsize="end"
             android:singleLine="true"
@@ -57,23 +56,23 @@
             android:textSize="15sp"
             app:textStyle="light" />
 
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/title"
+            android:layout_gravity="left"
+            android:textColor="@color/launch_list_txt"
+            android:textSize="14sp"
+            app:textStyle="light" />
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:layout_below="@+id/title"
             android:layout_toLeftOf="@+id/full_tile_price_container"
             android:gravity="bottom">
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/subtitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_gravity="left"
-                android:layout_marginTop="-5dp"
-                android:textColor="@color/launch_list_txt"
-                android:textSize="14sp"
-                app:textStyle="light" />
 
             <LinearLayout
                 android:id="@+id/rating_info"
