--- a/project/src/main/res/layout/section_lx_search_row.xml
+++ b/project/src/main/res/layout/section_lx_search_row.xml
@@ -85,7 +85,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="4dp"
-            android:padding="2dp"
+            android:drawableLeft="@drawable/ticket"
+            android:drawablePadding="4dp"
             android:textColor="@color/lx_search_result_info_text_color"
             android:textSize="10sp" />
 
@@ -94,7 +95,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
-            android:drawableLeft="@drawable/doors"
+            android:drawableLeft="@drawable/time"
             android:drawablePadding="4dp"
             android:gravity="right"
             android:textColor="@color/lx_search_result_info_text_color"
