Fixed bugs found in bug bash 1. #2127 User returning from Explore now button shouldn't be directed to Home screen 2. #2128 Card flipped state is not restored on orientation change. 3. #2131 Explore now button should have rounded corners 4. #2132 Main tiles on home page are clickable even under animation 5. #2135 The scroll on the L-shape strip should be disabled 6. #2136 The app is crashing when the image of the explore now image is not loaded

--- a/project/src/travelocity/res/layout/fragment_tablet_launch.xml
+++ b/project/src/travelocity/res/layout/fragment_tablet_launch.xml
@@ -20,6 +20,7 @@
         android:layout_gravity="top"
         android:layout_marginTop="@dimen/extra_status_bar_padding"
         android:background="@drawable/bg_tablet_bottom_fade"
+        android:clickable="true"
         android:gravity="top|center_horizontal"
         android:paddingTop="?android:actionBarSize" />
 
