--- a/project/src/travelocity/res/layout/fragment_tablet_launch_destination_list.xml
+++ b/project/src/travelocity/res/layout/fragment_tablet_launch_destination_list.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/collection_overlay_color"
+    android:background="@drawable/bg_itin_placeholder_travelocity"
     android:orientation="horizontal">
 
     <com.expedia.bookings.widget.OptimizedImageView
@@ -42,6 +42,7 @@
     <View
         android:id="@+id/destination_title_bg_overlay"
         android:layout_width="@dimen/destination_list_bg_title_overlay_width"
+        android:clickable="true"
         android:layout_height="match_parent" />
 
     <TextView
