--- a/project/src/main/res/values-sw600dp/colors.xml
+++ b/project/src/main/res/values-sw600dp/colors.xml
@@ -41,6 +41,7 @@
     <color name="tablet_hotel_sort_filter_text_disabled">#336a6a6a</color>
     <color name="tablet_hotel_sort_filter_done">#0B4EA4</color>
     <color name="tablet_hotel_sort_filter_done_pressed">#a6c8f3</color>
+    <color name="tablet_hotel_coupon_text_color">#FFE115</color>
 
     <!-- Tablet Flights -->
     <color name="tablet_flight_filter_text_color">#4c5156</color>
