--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -304,4 +304,5 @@
     <attr name="skin_hotelLoginActionBarIcon" format="reference" />
     <attr name="skin_flightLoginActionBarIcon" format="reference" />
 
+    <attr name="skin_tablet_hotel_coupon_text_color" format="reference|color" />
 </resources>
