--- a/project/src/travelocity/res/values/dimens.xml
+++ b/project/src/travelocity/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="destination_list_launch_card_spacing">5dp</dimen>
 
     <dimen name="search_bar_margin_top">20dp</dimen>
+    <dimen name="destination_tile_image_width">1280px</dimen>
 </resources>
