--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -262,19 +262,26 @@
     <color name="lx_invalid_days_calendar">#A9A9A9</color>
     <color name="lx_calendar_week_color">#888888</color>
     <color name="lx_search_result_info_text_color">#5C5C5C</color>
-    <color name="lx_dates_text_color">#707070</color>
+    <color name="lx_dates_text_color">#6C6C6C</color>
     <color name="lx_details_text_color">#525252</color>
+    <color name="lx_details_heading_text_color">#3C3C3C</color>
+    <color name="lx_details_content_text_color">#585858</color>
     <color name="lx_offer_background_color">#7C7C7C</color>
     <color name="lx_details_background_color">#EEEEED</color>
-    <color name="lx_ticket_summary_color">#5D5D5D</color>
-    <color name="lx_ticket_title_color">#3A3A3A</color>
+    <color name="lx_ticket_summary_color">#676767</color>
+    <color name="lx_ticket_title_color">#3C3C3C</color>
     <color name="lx_select_ticket_button_color">#7C7C7C</color>
-    <color name="lx_date_disabled_background_color">#D3D3D3</color>
+    <color name="lx_date_disabled_background_color">@android:color/white</color>
     <color name="lx_checkmark_color">#29a653</color>
     <color name="lx_actionbar_text_color">#5C5C5C</color>
     <color name="lx_confirmation_gradient">#80000000</color>
     <color name="lx_confirmation_background">#1A1D20</color>
     <color name="lx_confirmation_action_text_color">#F3F3F3</color>
     <color name="lx_sort_filter_background_color">#E4E4E4</color>
+    <color name="lx_ticket_picker_disabled">#C3C3C3</color>
+    <color name="lx_info_secondary_text_color">#CDCDCD</color>
+    <color name="lx_dates_disabled_text_color">#D7D7D7</color>
+    <color name="lx_secondary_color_disabled">#F6DAC0</color>
+    <color name="lx_dates_container_border_color">#CCCCCC</color>
 
 </resources>
