--- a/project/src/main/res/values/styles.xml
+++ b/project/src/main/res/values/styles.xml
@@ -1089,11 +1089,11 @@
     </style>
 
     <style name="LXOfferDayTextView">
-        <item name="android:textSize">10dp</item>
+        <item name="android:textSize">11sp</item>
     </style>
 
     <style name="LXOfferDateTextView">
-        <item name="android:textSize">14dp</item>
+        <item name="android:textSize">15sp</item>
     </style>
 
 </resources>
