--- a/project/src/main/res/layout/fragment_pay_later_info_screen.xml
+++ b/project/src/main/res/layout/fragment_pay_later_info_screen.xml
@@ -45,7 +45,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/etp_pay_now_charges_text" />
+                    android:text="?attr/skin_etp_pay_now_charges_text" />
 
             </LinearLayout>
 
