--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -305,4 +305,5 @@
     <attr name="skin_flightLoginActionBarIcon" format="reference" />
 
     <attr name="skin_tablet_hotel_coupon_text_color" format="reference|color" />
+    <attr name="skin_etp_pay_now_charges_text" format="string" />
 </resources>
